#900 Fix wrong height

--- a/themes/Luna/style.css
+++ b/themes/Luna/style.css
@@ -9,7 +9,6 @@ body, html {
 	background-color: #e8e8e8;
 	font-family: "Segoe UI", Arial;
 	min-height: 100%;
-	height: 100%;
 }
 
 .container * {
